[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Andrea Nall <anall@andreanall.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc21-day1"
path = "src/day1.rs"

[[bin]]
name = "aoc21-day2"
path = "src/day2.rs"

[[bin]]
name = "aoc21-day3"
path = "src/day3.rs"

[[bin]]
name = "aoc21-day4"
path = "src/day4.rs"

[[bin]]
name = "aoc21-day5"
path = "src/day5.rs"

[[bin]]
name = "aoc21-day6"
path = "src/day6.rs"

[[bin]]
name = "aoc21-day7"
path = "src/day7.rs"

[[bin]]
name = "aoc21-day8"
path = "src/day8.rs"


[[bin]]
name = "aoc21-day10"
path = "src/day10.rs"

[profile.release]
opt-level = 3

[dependencies]
adventlib = { path="../adventlib" }
regex = "~1.4.2"
itertools = "~0.10.3"

#console-bitmap = { path="../console-bitmap" }

#lazy_static = "~1.4.0"
#intspan = "~0.4.14"
