[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Andrea Nall <anall@andreanall.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="aoc2021"
path="src/lib.rs"

[[bin]]
name = "aoc21-day1"
path = "src/day1.rs"

[[bin]]
name = "aoc21-day2"
path = "src/day2.rs"

[[bin]]
name = "aoc21-day3"
path = "src/day3.rs"

[[bin]]
name = "aoc21-day4"
path = "src/day4.rs"

[[bin]]
name = "aoc21-day5"
path = "src/day5.rs"

[[bin]]
name = "aoc21-day6"
path = "src/day6.rs"

[[bin]]
name = "aoc21-day7"
path = "src/day7.rs"

[[bin]]
name = "aoc21-day8"
path = "src/day8.rs"

[[bin]]
name = "aoc21-day9"
path = "src/day9.rs"

[[bin]]
name = "aoc21-day10"
path = "src/day10.rs"

[[bin]]
name = "aoc21-day11"
path = "src/day11.rs"

# day 12

[[bin]]
name = "aoc21-day13"
path = "src/day13.rs"

# day 14

[[bin]]
name = "aoc21-day15"
path = "src/day15.rs"

[[bin]]
name = "aoc21-day16"
path = "src/day16.rs"

[profile.release]
opt-level = 3

[dependencies]
adventlib = { path="../adventlib" }
regex = "~1.4.2"
itertools = "~0.10.3"
console-bitmap = { git = "https://github.com/anall/console-bitmap-rs" }
pathfinding = "2.2.2"

#lazy_static = "~1.4.0"
#intspan = "~0.4.14"
